checkerror.log
Vérification de la syntaxe pour complexe.h :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c complexe.h
Vérification de la syntaxe pour complexe.c :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c complexe.c
Vérification de la syntaxe pour mandelbrot.c :
gcc -std=c99 -c -Wall -Wextra -pedantic -Werror -fsyntax-only -x c mandelbrot.c
mandelbrot.c:26:12: error: incompatible pointer types passing 'float *' to parameter of type 'double *' [-Werror,-Wincompatible-pointer-types]
   26 |     module(&mod, zn);
      |            ^~~~
./complexe.h:166:21: note: passing argument to parameter 'mod' here
  166 | void module(double* mod, complexe_t z);
      |                     ^
mandelbrot.c:31:16: error: incompatible pointer types passing 'float *' to parameter of type 'double *' [-Werror,-Wincompatible-pointer-types]
   31 |         module(&mod, zn);
      |                ^~~~
./complexe.h:166:21: note: passing argument to parameter 'mod' here
  166 | void module(double* mod, complexe_t z);
      |                     ^
2 errors generated.
